--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "helmet": "^6.1.5",
+    "morgan": "^1.10.0",
     "sequelize": "^6.28.0"
   }
 }
